[workspace.package]
name = "robot_control_system"
version = "0.1.0"
edition = "2021"
authors = ["Jonte"]
license = "MIT"
repository = "https://github.com/Skienex/robot_control_system"

[workspace]
resolver = "2"
members = [
    "robot_main",
    "robot_core",
    "robot_web",
    "robot_controller"
]
default-members = ["robot_main"]

[workspace.dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
