[package]
name = "robot_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.8"
log.workspace = true
actix-web = "4.10.2"
serde.workspace = true
serde_json = "1.0.140"
axum = "0.8.4"